%% Open Plan – domeinmodel / API resources
%% Gegenereerd via reverse-engineering van src/openplan/plannen/models
%% en src/plan-openapi.yaml.
%%
%% Conventies:
%%   - PK = primary key (UUID4, tevens resource-identifier in de REST API)
%%   - URN = vng_api_common URN-veld (verwijzing naar externe registers)
%%   - <<enum>> = TextChoices uit openplan.plannen.enums
%%
classDiagram
    direction LR

    class OverkoepelendPlan {
        +UUID uuid PK
        +string titel
        +PlanStatus status
        +URN medewerker
    }

    class Plan {
        +UUID uuid PK
        +PlanStatus status
        +PlanStatus fase
        +string titel
        +string notitie
        +datetime startdatum
        +datetime einddatum
        +string reden_einde
        +URN zaak
        +URN domeinregister
        +URN medewerker
    }

    class PlanType {
        +UUID uuid PK
        +PlanTypeEnum type
    }

    class Doel {
        +UUID uuid PK
        +PlanStatus status
        +string titel
        +string beschrijving
        +datetime startdatum
        +datetime einddatum
        +Resultaat resultaat
        +string toelichting_resultaat
    }

    class DoelType {
        +UUID uuid PK
        +DoelTypeEnum doel_type
    }

    class DoelCategorie {
        +UUID uuid PK
        +string naam
    }

    class Ontwikkelwens {
        +UUID uuid PK
        +PlanStatus status
        +string titel
        +string beschrijving
        +datetime startdatum
        +datetime einddatum
        +Resultaat resultaat
    }

    class Instrument {
        +UUID uuid PK
        +PlanStatus status
        +string titel
        +datetime startdatum
        +datetime einddatum
        +Resultaat resultaat
        +URN product
        +URN zaak
    }

    class InstrumentType {
        +UUID uuid PK
        +InstrumentTypeEnum instrument_type
    }

    class InstrumentCategorie {
        +UUID uuid PK
        +string naam
    }

    class Contactmoment {
        +UUID uuid PK
        +PlanStatus status
        +string toelichting_status
        +datetime datum
        +string notitie
        +URN persoonsprofiel
    }

    class Persoon {
        +UUID uuid PK
        +URN persoonsprofiel
        +URN klant
        +BSN bsn
    }

    class Relatie {
        +UUID uuid PK
    }

    class RelatieType {
        +UUID uuid PK
        +string naam
    }

    class PlanStatus {
        <<enumeration>>
        actief
        afgerond
        geannuleerd
    }
    class Resultaat {
        <<enumeration>>
        behaald
        gefaald
    }
    class PlanTypeEnum {
        <<enumeration>>
        pip
        werk
        inkomen
    }
    class InstrumentTypeEnum {
        <<enumeration>>
        training
        coaching
        financiele_ondersteuning
    }
    class DoelTypeEnum {
        <<enumeration>>
        hoofddoel
        subdoel
    }

    %% --- Compositie / aggregatie -------------------------------------------------
    OverkoepelendPlan "1" o-- "*" Plan : plannen
    Plan "1" --> "1" PlanType : plantype
    Plan "1" *-- "*" Contactmoment : contactmomenten
    Plan "*" -- "*" Doel : doelen
    Doel "1" --> "1" Persoon : persoon (primair)
    Doel "1" --> "1" DoelType : doeltype
    Doel "0..1" <-- "*" Doel : hoofd_doel / subdoelen
    Doel "1" *-- "*" Ontwikkelwens : ontwikkelwensen
    Ontwikkelwens "*" -- "*" DoelCategorie : doel_categorieen
    DoelType "*" -- "*" DoelCategorie : categorieen

    Doel "*" -- "*" Instrument : instrumenten
    Ontwikkelwens "*" -- "*" Instrument : instrumenten
    Instrument "1" --> "1" InstrumentType : instrumenttype
    Instrument "*" -- "*" InstrumentCategorie : instrument_categorieen
    InstrumentType "*" -- "*" InstrumentCategorie : categorieen

    Relatie "*" --> "1" Persoon : persoon
    Relatie "*" --> "1" Persoon : gerelateerde_persoon
    Relatie "*" --> "1" RelatieType : relatietype
